# frontier-llm-mac-stack

./: .env.example  .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  docker-compose-wrapper.sh  docker-compose.yml  pull-model.sh  ssh-setup-instructions.md  stack-select.sh  start.sh  stop.sh
docs/: ENVIRONMENT_VARIABLES.md  choosing-agent-solution.md  performance-tuning.md  resource-allocation.md  ssh-setup-guide.md
issues/: 000001_LLM_STACK_000001_validate_prerequisites.md  000001_MISTRAL_project_structure_refactor.md  000002_LLM_STACK_000002_ssh_setup_verification.md  000002_MISTRAL_common_monitoring_extraction.md  000003_LLM_STACK_000003_docker_environment_init.md  000003_MISTRAL_docker_image_creation.md  000004_LLM_STACK_000004_directory_structure_config.md  000004_MISTRAL_compose_configuration.md  000005_LLM_STACK_000005_ollama_service_deployment.md  000005_MISTRAL_api_compatibility_layer.md  000006_LLM_STACK_000006_monitoring_stack_setup.md  000006_MISTRAL_monitoring_integration.md  000007_LLM_STACK_000007_nginx_reverse_proxy.md  000007_MISTRAL_model_management.md  000008_LLM_STACK_000008_initial_model_pull.md  000008_MISTRAL_performance_optimization.md  000009_LLM_STACK_000009_aider_installation_macbook.md  000009_MISTRAL_integration_testing.md  000010_LLM_STACK_000010_remote_connectivity_testing.md  000010_MISTRAL_documentation_update.md  (+7 more)
stacks/mistral/api-proxy/: Cargo.toml  Dockerfile  build-test.sh
stacks/mistral/api-proxy/src/: config.rs  converters.rs  error.rs  lib.rs  main.rs  metrics.rs
stacks/mistral/api-proxy/src/handlers/: chat.rs  mod.rs  models.rs
stacks/mistral/api-proxy/src/models/: mistral.rs  mod.rs  ollama.rs
stacks/mistral/api-proxy/tests/: metrics_test.rs
(+102 files in other folders)
