[package]
name = "mistral-ollama-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mistral-ollama-proxy"
path = "src/main.rs"

[lib]
name = "mistral_ollama_proxy"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
axum-test = "14.0"